methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:2: error: type mismatch;
 found   : Unit
 required: Boolean
def isFacingTrail():Boolean = {
                              ^SlugTracking:6: error: overloaded method value * with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Unit)
1*droite()
 ^