methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
}        

1*droite()
